--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ribeirohugo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ribeirohugo.github.io/ribeirohugo",
+  "homepage": "https://ribeirohugo.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
